# dropcure

./: .gitignore  Makefile  README.md  docker-compose.yaml
common/: LICENSE  README.md  common.cabal
common/src/: Client.hs
common/src/Common/: Config.hs  Types.hs
consumer/: Dockerfile  README.md  consumer.cabal
consumer/app/: Main.hs
consumer/src/Consumer/: Client.hs  Config.hs  Server.hs  Types.hs
producer/: Dockerfile  LICENSE  README.md  producer.cabal  stack.yaml
producer/app/: Main.hs
producer/src/Producer/: Client.hs  Config.hs  Server.hs  Types.hs
