name:                common
version:             0.1.0.0
homepage:            https://github.com/filib/dropcure/common#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Cunningham
maintainer:          hello@filib.io
copyright:           2017 Philip Cunningham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common.Config
                     , Common.Types
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/filib/dropcure