name:                consumer
version:             0.1.0.0
homepage:            https://github.com/filib/dropcure/producer
license:             BSD3
license-file:        LICENSE
author:              Philip Cunningham
maintainer:          hello@filib.io
copyright:           2017 Philip Cunningham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Consumer.Client
                     , Consumer.Server
  build-depends:       base >= 4.7 && < 5
                     , amqp
                     , bytestring
                     , common
                     , containers
                     , http-types
                     , network
                     , retry
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable consumer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , consumer
  default-language:    Haskell2010

test-suite consumer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , consumer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/filib/dropcure/producer
